force-app/main/default/objects/Smartfridge__c/Smartfridge__c.object-meta.xml
<CustomObject>
    <label>Smartfridge</label>
    <nameField>
        <label>Smartfridge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Smartfridges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>