force-app/main/default/objects/Smartfridge__c/fields/Case_created__c.field-meta.xml
<CustomField>
    <fullName>Case_created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case created</label>
    <type>Checkbox</type>
</CustomField>