force-app/main/default/objects/Smartfridge__c/fields/Create_Event_Records__c.field-meta.xml
<CustomField>
    <fullName>Create_Event_Records__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Event Records</label>
    <type>Checkbox</type>
</CustomField>