force-app/main/default/objects/Smartfridge__c/fields/Door_Opened_For__c.field-meta.xml
<CustomField>
    <fullName>Door_Opened_For__c</fullName>
    <formula>IF( ISPICKVAL(Door__c, &quot;Open&quot;), UNIXTIMESTAMP(NOW()) - UNIXTIMESTAMP(Door_Opened_Timestamp__c), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Door Opened For</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>