force-app/main/default/objects/Smartfridge__c/fields/Door_Opened_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Door_Opened_Timestamp__c</fullName>
    <label>Door Open Timestamp</label>
    <type>DateTime</type>
</CustomField>