force-app/main/default/objects/Smartfridge__c/fields/Imp_Device_Id__c.field-meta.xml
<CustomField>
    <fullName>Imp_Device_Id__c</fullName>
    <externalId>true</externalId>
    <label>Imp Device Id</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>